--- a/css/style00.css
+++ b/css/style00.css
@@ -44,6 +44,7 @@ body {
     font-family: 'Jost', sans-serif;
     /*заменяем на нужный*/
     font-size: 1rem;
+    min-width: 1024px;
 }
 
 
@@ -156,7 +157,7 @@ h4 {
     margin-left: auto;
     display: flex;
     flex-flow: row wrap;
-    padding: 0 2rem;
+    padding: 0 3rem;
 }
 
 
@@ -217,7 +218,7 @@ header .wrap {
     /*! display: flex; */
     /*! justify-content: space-between; */
     align-items: center;
-    padding: 0.5rem 0;
+    padding: 0.5rem 1rem;
 }
 
 header .icon {
@@ -551,4 +552,18 @@ position: absolute;
 	position: absolute;
 	bottom: 0;
 	width: 0.5rem;
+}
+.tag_s .box{
+    margin: -0.25rem;
+}
+.tag {
+    background: var(--list_back);
+    
+    font-size: 0.8rem;
+    padding: 0 0.15rem 0 0.6rem;
+    border: solid 1px var(--grey);
+    display: inline-flex;
+    border-radius: 6px;
+    align-items: center;
+    margin: 0.25rem;
 }
