--- a/css/style00.css
+++ b/css/style00.css
@@ -574,3 +574,104 @@ position: absolute;
     max-width: inherit;
     cursor: pointer;
 }
+#pop_up_call{
+    position: relative;
+}
+#call_add_tag{
+    position: absolute;
+    /*! background: blue; */
+    
+    right: -10rem;
+    top: 0.5rem;
+    /*! left: 7rem; */
+    /*! margin-left: 6rem; */
+    /*! width: 12rem; */
+    z-index: 100;
+}
+.pop_up{
+    
+    font-size: 0.875rem;
+    box-shadow: 0px 4px 16px 0px rgba(0,0,0,0.25);
+    border-radius: 6px;
+    background: var(--white);
+}
+.pop_up .title{
+    background-color: var(--main);
+    color: var(--white);
+    border-radius: 6px 6px 0 0;
+    margin-bottom: 1.5rem;
+}
+.pop_up .title img{
+    cursor: pointer;
+}
+ /* Customize the label (the container) */
+.container {
+  display: block;
+  position: relative;
+  padding-left: 2rem;
+  margin-bottom: 1.5rem;
+  cursor: pointer;
+  /*! font-size: 22px; */
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+/* Hide the browser's default checkbox */
+.container input {
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+  height: 0;
+  width: 0;
+}
+
+/* Create a custom checkbox */
+.checkmark {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 1rem;
+  width: 1rem;
+  /*! background-color: #eee; */
+  border: solid 2px var(--grey);
+  border-radius: 2px;
+}
+
+/* On mouse-over, add a grey background color */
+.container:hover input ~ .checkmark {
+  /*! background-color: RGBa(229, 115, 115,0.15); */
+  border: solid 2px var(--main);
+}
+
+/* When the checkbox is checked, add a blue background */
+.container input:checked ~ .checkmark {
+  background-color: var(--main);
+  border: solid 2px var(--main);
+}
+
+/* Create the checkmark/indicator (hidden when not checked) */
+.checkmark:after {
+  content: "";
+  position: absolute;
+  display: none;
+}
+
+/* Show the checkmark when checked */
+.container input:checked ~ .checkmark:after {
+  display: block;
+}
+
+/* Style the checkmark/indicator */
+.container .checkmark:after {
+  left: 3px;
+  top: -2px;
+  width: 4px;
+  height: 10px;
+  border: solid white;
+  border-width: 0 2px 2px 0;
+  -webkit-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  transform: rotate(45deg);
+} 
