--- a/css/style00.css
+++ b/css/style00.css
@@ -160,11 +160,10 @@ h4 {
     padding: 0 3rem;
 }
 
-
 .row_data {
     width: 100%;
     display: flex;
-    margin: ;
+    
 }
 
 
@@ -172,15 +171,15 @@ h4 {
 
 header {
     background: var(--main);
+    position: sticky;
+    top: 0;
+    z-index: 999;
+    box-shadow: 0px 2px 8px 0 rgba(0, 0, 0, 0.3);
 }
-
-
 
 .content main {
     width: 100%;
 }
-
-
 
 .content {}
 
@@ -189,6 +188,7 @@ footer {}
 input {
     font-family: 'Jost', sans-serif;
 }
+
 #logo {
     opacity: 0.25;
 }
@@ -259,8 +259,6 @@ header .icon {
     display: flex;
 }
 
-
-
 .date_s .date_select .date_preselect .button {
     /*! background: var(--list_back); */
     color: var(--main);
@@ -295,12 +293,14 @@ header .icon {
 .date_s .date_select .input_date #start {
     width: 8.3333%
 }
-main section  {
+
+main section {
     display: flex;
     justify-content: space-between;
     align-items: flex-start;
     margin: 0 -2rem;
 }
+
 main .table .title {
     display: flex;
     align-items: center;
@@ -320,7 +320,8 @@ main .table .title {
     font-weight: 400;
     cursor: pointer;
 }
-.bar{
+
+.bar {
     /*! width: 100%; */
     height: 2rem;
     /*! border-radius: 6px; */
@@ -329,7 +330,8 @@ main .table .title {
     /*! margin-bottom: 0.5rem; */
     font-weight: 500;
 }
-.name{
+
+.name {
     font-size: 0.8rem;
     color: var(--font_black);
     /*! background: antiquewhite; */
@@ -337,250 +339,275 @@ main .table .title {
 }
 
 .screen_01 #data_01 {
-	width: calc((100% - 58.3333%) / 2);
+    width: calc((100% - 58.3333%) / 2);
 }
+
 .screen_01 #data_02 {
     width: calc((100% - 58.3333%) / 2);
 }
+
 .screen_01 #data_03 {
-	display: flex;
-	width: 58.3333%;
-	flex-flow: row wrap;
+    display: flex;
+    width: 58.3333%;
+    flex-flow: row wrap;
 }
+
 .screen_01 #data_03 .col_01 {
-	width: 25%;
-	/*! background: aliceblue; */
+    width: 25%;
+    /*! background: aliceblue; */
 }
+
 .screen_01 #data_03 .col_02 {
-	width: 25%;
-	/*! background: antiquewhite; */
+    width: 25%;
+    /*! background: antiquewhite; */
 }
+
 .screen_01 #data_03 .col_03 {
-	width: 25%;
+    width: 25%;
 }
+
 .screen_01 #data_03 .col_04 {
-	width: 25%;
+    width: 25%;
 }
+
+
 /*-----*/
+
 .screen_01 #data_01 .col_01 .bar {
-	/*! background-color: var(--bar_02); */
-	
-	/*! opacity: 0.15; */
-	position: relative;
+    /*! background-color: var(--bar_02); */
+    /*! opacity: 0.15; */
+    position: relative;
 }
-.screen_01 #data_01 .col_01 .bar span{
-background-color: var(--bar_01);
-opacity: 0.15;
-width: 100%;
-height: 2rem;
-border-radius: 6px;
-position: absolute;
+
+.screen_01 #data_01 .col_01 .bar span {
+    background-color: var(--bar_01);
+    opacity: 0.15;
+    width: 100%;
+    height: 2rem;
+    border-radius: 6px;
+    position: absolute;
 }
-.screen_01 #data_01 .col_01 .bar .volume{
-	background-color: var(--bar_01);
-	
-	
-	position: absolute;
-	/*! left: 0; */
-	border-radius: 6px;
-	height: 2rem;
-	/*! width: calc(100%/8); */
-	line-height: 2rem;
-	padding-left: 1rem;
+
+.screen_01 #data_01 .col_01 .bar .volume {
+    background-color: var(--bar_01);
+    position: absolute;
+    /*! left: 0; */
+    border-radius: 6px;
+    height: 2rem;
+    /*! width: calc(100%/8); */
+    line-height: 2rem;
+    padding-left: 1rem;
 }
+
 
 /*-----*/
-.screen_01 #data_03 .col_01 .bar {
 
-	position: relative;
+.screen_01 #data_03 .col_01 .bar {
+    position: relative;
 }
-.screen_01 #data_03 .col_01 .bar span{
-background-color: var(--bar_02);
-opacity: 0.15;
-width: 100%;
-height: 2rem;
-border-radius: 6px;
-position: absolute;
+
+.screen_01 #data_03 .col_01 .bar span {
+    background-color: var(--bar_02);
+    opacity: 0.15;
+    width: 100%;
+    height: 2rem;
+    border-radius: 6px;
+    position: absolute;
 }
-.screen_01 #data_03 .col_01 .bar .volume{
-	background-color: var(--bar_02);
-	
-	
-	position: absolute;
-	/*! left: 0; */
-	border-radius: 6px;
-	height: 2rem;
-	/*! width: calc(100%/8); */
-	line-height: 2rem;
-	padding-left: 1rem;
+
+.screen_01 #data_03 .col_01 .bar .volume {
+    background-color: var(--bar_02);
+    position: absolute;
+    /*! left: 0; */
+    border-radius: 6px;
+    height: 2rem;
+    /*! width: calc(100%/8); */
+    line-height: 2rem;
+    padding-left: 1rem;
 }
-.screen_01 #data_03 .row_data .col_02 .box{
+
+.screen_01 #data_03 .row_data .col_02 .box {
     display: flex;
     /*! height: 4rem; */
     /*! padding: 0 2rem; */
     margin: 0 1rem;
 }
+
 .screen_01 #data_03 .row_data .col_02 .value {
-	/*! background: red; */
-	width: calc(100% - 0.5rem);
-	line-height: 2rem;
-	text-align: right;
-	padding-right: 2rem;
+    /*! background: red; */
+    width: calc(100% - 0.5rem);
+    line-height: 2rem;
+    text-align: right;
+    padding-right: 2rem;
 }
+
 .screen_01 #data_03 .row_data .col_02 .v_bar {
-	/*! background: green; */
-	/*! width: 0.5rem; */
-	position: relative;
+    /*! background: green; */
+    /*! width: 0.5rem; */
+    position: relative;
 }
+
 .screen_01 #data_03 .row_data .col_02 .value .value_01 {
-	font-weight: 600;
-	
+    font-weight: 600;
 }
-.screen_01 #data_03 .row_data .col_02 .value .value_01:after{
+
+.screen_01 #data_03 .row_data .col_02 .value .value_01:after {
     content: "%";
     font-size: 0.875rem;
-        
     font-weight: 300;
 }
+
 .screen_01 #data_03 .row_data .col_02 .value .value_02 {
-	font-weight: 300;
-	font-size: 0.75rem;
-	color: var(--font_grey);
-	display: flex;
-	justify-content: flex-end;
-	/*! background: antiquewhite; */
+    font-weight: 300;
+    font-size: 0.75rem;
+    color: var(--font_grey);
+    display: flex;
+    justify-content: flex-end;
+    /*! background: antiquewhite; */
 }
----
-.screen_01 #data_03 .row_data .col_03 .box{
+
+--- .screen_01 #data_03 .row_data .col_03 .box {
     display: flex;
     /*! height: 4rem; */
     /*! padding: 0 2rem; */
     margin: 0 1rem;
 }
-.screen_01 #data_03 .row_data .col_03 .box{
+
+.screen_01 #data_03 .row_data .col_03 .box {
     display: flex;
     /*! height: 4rem; */
     /*! padding: 0 2rem; */
     margin: 0 1rem;
 }
+
 .screen_01 #data_03 .row_data .col_03 .value {
-	/*! background: red; */
-	width: calc(100% - 0.5rem);
-	line-height: 2rem;
-	text-align: right;
-	padding-right: 2rem;
+    /*! background: red; */
+    width: calc(100% - 0.5rem);
+    line-height: 2rem;
+    text-align: right;
+    padding-right: 2rem;
 }
+
 .screen_01 #data_03 .row_data .col_03 .v_bar {
-	/*! background: green; */
-	/*! width: 0.5rem; */
-	position: relative;
+    /*! background: green; */
+    /*! width: 0.5rem; */
+    position: relative;
 }
+
 .screen_01 #data_03 .row_data .col_03 .value .value_01 {
-	font-weight: 600;
-	
+    font-weight: 600;
 }
-.screen_01 #data_03 .row_data .col_03 .value .value_01:after{
+
+.screen_01 #data_03 .row_data .col_03 .value .value_01:after {
     content: "шт.";
     font-size: 0.875rem;
-        
     font-weight: 300;
     margin-left: .25rem;
 }
+
 .screen_01 #data_03 .row_data .col_03 .value .value_02 {
-	font-weight: 300;
-	font-size: 0.75rem;
-	color: var(--font_grey);
-	display: flex;
-	justify-content: flex-end;
-	/*! background: antiquewhite; */
+    font-weight: 300;
+    font-size: 0.75rem;
+    color: var(--font_grey);
+    display: flex;
+    justify-content: flex-end;
+    /*! background: antiquewhite; */
 }
----
-.screen_01 #data_03 .row_data .col_04 .box{
+
+--- .screen_01 #data_03 .row_data .col_04 .box {
     display: flex;
     /*! height: 4rem; */
     /*! padding: 0 2rem; */
     margin: 0 1rem;
 }
-.screen_01 #data_03 .row_data .col_04 .box{
+
+.screen_01 #data_03 .row_data .col_04 .box {
     display: flex;
     /*! height: 4rem; */
     /*! padding: 0 2rem; */
     margin: 0 1rem;
 }
+
 .screen_01 #data_03 .row_data .col_04 .value {
-	/*! background: red; */
-	width: calc(100% - 0.5rem);
-	line-height: 2rem;
-	text-align: right;
-	padding-right: 2rem;
+    /*! background: red; */
+    width: calc(100% - 0.5rem);
+    line-height: 2rem;
+    text-align: right;
+    padding-right: 2rem;
 }
+
 .screen_01 #data_03 .row_data .col_04 .v_bar {
-	/*! background: green; */
-	/*! width: 0.5rem; */
-	position: relative;
+    /*! background: green; */
+    /*! width: 0.5rem; */
+    position: relative;
 }
+
 .screen_01 #data_03 .row_data .col_04 .value .value_01 {
-	font-weight: 600;
-	
+    font-weight: 600;
 }
-.screen_01 #data_03 .row_data .col_04 .value .value_01:after{
+
+.screen_01 #data_03 .row_data .col_04 .value .value_01:after {
     content: "%";
     font-size: 0.875rem;
-        
     font-weight: 300;
 }
+
 .screen_01 #data_03 .row_data .col_04 .value .value_02 {
-	font-weight: 300;
-	font-size: 0.75rem;
-	color: var(--font_grey);
-	display: flex;
-	justify-content: flex-end;
-	/*! background: antiquewhite; */
+    font-weight: 300;
+    font-size: 0.75rem;
+    color: var(--font_grey);
+    display: flex;
+    justify-content: flex-end;
+    /*! background: antiquewhite; */
 }
+
 .v_bar span {
-	background-color: var(--bar_03);
-	width: 0.5rem;
-	display: inline-block;
-	height: 100%;
-	position: absolute;
-	opacity: 0.15;
+    background-color: var(--bar_03);
+    width: 0.5rem;
+    display: inline-block;
+    height: 100%;
+    position: absolute;
+    opacity: 0.15;
 }
 
 .v_bar .volume {
-	background-color: var(--bar_03);
-	
-	position: absolute;
-	bottom: 0;
-	width: 0.5rem;
+    background-color: var(--bar_03);
+    position: absolute;
+    bottom: 0;
+    width: 0.5rem;
 }
-.tag_s .box{
-    margin: -0.25rem;
+
+.tag_s .box {
+    margin: -0.25rem -0.125rem;
 }
+
 .tag {
     background: var(--list_back);
-    
     font-size: 0.8rem;
     padding: 0 0.15rem 0 0.6rem;
     border: solid 1px var(--grey);
     display: inline-flex;
     border-radius: 6px;
     align-items: center;
-    margin: 0.25rem;
+    margin: 0.25rem 0.125rem;
     line-height: 0.875rem;
 }
-.tag_s .tag span img, .icon img{
+
+.tag_s .tag span img,
+.icon img {
     /*! width: 2rem; */
     /*! height: 2rem; */
     max-width: inherit;
     cursor: pointer;
 }
-#pop_up_call{
+
+#pop_up_call {
     position: relative;
 }
-#call_add_tag{
+
+#call_add_tag {
     position: absolute;
     /*! background: blue; */
-    
     right: -10rem;
     top: 0.5rem;
     /*! left: 7rem; */
@@ -588,90 +615,109 @@ position: absolute;
     /*! width: 12rem; */
     z-index: 100;
 }
-.pop_up{
-    
+
+.pop_up {
     font-size: 0.875rem;
-    box-shadow: 0px 4px 16px 0px rgba(0,0,0,0.25);
+    box-shadow: 0px 4px 16px 0px rgba(0, 0, 0, 0.25);
     border-radius: 6px;
     background: var(--white);
 }
-.pop_up .title{
+
+.pop_up .title {
     background-color: var(--main);
     color: var(--white);
     border-radius: 6px 6px 0 0;
     margin-bottom: 1.5rem;
 }
-.pop_up .title img{
+
+.pop_up .title img {
     cursor: pointer;
 }
- /* Customize the label (the container) */
+
+
+/* Customize the label (the container) */
+
 .container {
-  display: block;
-  position: relative;
-  padding-left: 2rem;
-  margin-bottom: 1.5rem;
-  cursor: pointer;
-  /*! font-size: 22px; */
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
+    display: block;
+    position: relative;
+    padding-left: 2rem;
+    margin-bottom: 1.5rem;
+    cursor: pointer;
+    /*! font-size: 22px; */
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
+
 
 /* Hide the browser's default checkbox */
+
 .container input {
-  position: absolute;
-  opacity: 0;
-  cursor: pointer;
-  height: 0;
-  width: 0;
+    position: absolute;
+    opacity: 0;
+    cursor: pointer;
+    height: 0;
+    width: 0;
 }
+
 
 /* Create a custom checkbox */
+
 .checkmark {
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 1rem;
-  width: 1rem;
-  /*! background-color: #eee; */
-  border: solid 2px var(--grey);
-  border-radius: 2px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 1rem;
+    width: 1rem;
+    /*! background-color: #eee; */
+    border: solid 2px var(--grey);
+    border-radius: 2px;
 }
+
 
 /* On mouse-over, add a grey background color */
+
 .container:hover input ~ .checkmark {
-  /*! background-color: RGBa(229, 115, 115,0.15); */
-  border: solid 2px var(--main);
+    /*! background-color: RGBa(229, 115, 115,0.15); */
+    border: solid 2px var(--main);
 }
+
 
 /* When the checkbox is checked, add a blue background */
+
 .container input:checked ~ .checkmark {
-  background-color: var(--main);
-  border: solid 2px var(--main);
+    background-color: var(--main);
+    border: solid 2px var(--main);
 }
+
 
 /* Create the checkmark/indicator (hidden when not checked) */
+
 .checkmark:after {
-  content: "";
-  position: absolute;
-  display: none;
+    content: "";
+    position: absolute;
+    display: none;
 }
+
 
 /* Show the checkmark when checked */
+
 .container input:checked ~ .checkmark:after {
-  display: block;
+    display: block;
 }
 
+
 /* Style the checkmark/indicator */
+
 .container .checkmark:after {
-  left: 3px;
-  top: -2px;
-  width: 4px;
-  height: 10px;
-  border: solid white;
-  border-width: 0 2px 2px 0;
-  -webkit-transform: rotate(45deg);
-  -ms-transform: rotate(45deg);
-  transform: rotate(45deg);
-} 
+    left: 3px;
+    top: -2px;
+    width: 4px;
+    height: 10px;
+    border: solid white;
+    border-width: 0 2px 2px 0;
+    -webkit-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
+    transform: rotate(45deg);
+}
