--- a/css/style00.css
+++ b/css/style00.css
@@ -212,6 +212,7 @@ header .item .user {
     display: flex;
     align-items: center;
     color: var(--white);
+    line-height: 1rem;
 }
 
 header .wrap {
